    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.

 */
 
 Short descrition
 + New Function
 * Updated Function
 - Removed Function
 
Changes in 1.1.0


Changes in 1.0.1
* performance refactoring
* event-dispatcher threads for gui
* log4j updated
* refactored the useage of log4j
+ task 00035: implementing maven
* fix 00033: timesets starttimes where set as endtime
+ task 00035: packaging by maven
+ task 00035: buildnumber
- task 00044: SWIXML menu removed

 
Changes in 1.0
* function validation
* changed about to sf-mail

Changes in 0.7
* beautify code
+ timevalidation on monitoring
* delete old entries improved
+ delete old entries
* Storing Data Bugfix
+ UserAction CheckFeeds
* TableColumn resizing bugfix
* stop unsynced reloading feed while looping
* write last event to database
* bugfix: exception when splashscreen not found
* bugfix: Feed equals
* bugfix: News equals
* some code improvements
+ DisplayCount Management
+ persist newsentity
* Changing the monitoring intervall is now recognized after the next monitoring step

Changes in 0.6
* new popup at notification opens the entry in a browser window
* Added JNotification Lib
* notification is now available
* monitor handling reorganized (notification handling)
* monitor intervall bugfix #1
+ junit added to build and ant
+ intervall to monitor added
+ first simple monitor added - works after a reboot
* fixed vacation dates field size bug - new pattern: "dd.MM.yyyy"
+ time frame validation
+ input validation displaycount and displaytime
+ add Test Suite
+ start and endtime validation
+ feed validation before save
* resize the columns to a adequate size
* Dist fix to include all necessary files

Changes in 0.5
* Bugfix db save
* remove empty rows automatically
* Change Table field style for booleans 