@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Wed May 04 18:11:48 CEST 2011
-buildNumber=105
+#Thu May 19 15:48:02 CEST 2011
+buildNumber=120
