@@ -15,12 +15,20 @@
 		cheap way to read news given by an RSS or ATOM feed by tray
 		notifications. To read the news, it will open a browser.</description>
 	<url>http://trayrss.nullpointer.at</url>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>at.nullpointer</groupId>
+			<artifactId>trayrss-gui</artifactId>
+			<version>1.1.0-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate</artifactId>
@@ -221,7 +229,7 @@
 						<configuration>
 							<format>r{0,number}</format>
 							<doCheck>false</doCheck>
-     						<doUpdate>false</doUpdate>
+							<doUpdate>false</doUpdate>
 							<items>
 								<item>buildNumber</item>
 							</items>
