@@ -23,6 +23,9 @@
  - Removed Function
  
 Changes in 1.1.0
+* splitting the project into submodules
++ if no url in rss entry, the read button is disabled
++ new UI
 
 
 Changes in 1.0.1
